otel-demo-helm/ebpf.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ebpf-agent
  labels:
    app: ebpf-agent
spec:
  selector:
    matchLabels:
      app: ebpf-agent
  template:
    metadata:
      labels:
        app: ebpf-agent
    spec:
      containers:
        - name: hny-ebpf-agent
          imagePullPolicy: IfNotPresent
          image: ghcr.io/honeycombio/honeycomb-ebpf-agent/ebpf-agent:latest
      imagePullSecrets:
        - name: ghcr-secret
