otel-demo-helm/everything.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-demo-frontend
  labels:
    helm.sh/chart: opentelemetry-demo-0.25.4
    
    opentelemetry.io/name: otel-demo-frontend
    app.kubernetes.io/instance: otel-demo
    app.kubernetes.io/component: frontend
    app.kubernetes.io/name: otel-demo-frontend
    app.kubernetes.io/version: "1.5.0"
    app.kubernetes.io/part-of: opentelemetry-demo
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      opentelemetry.io/name: otel-demo-frontend
  template:
    metadata:
      labels:
        opentelemetry.io/name: otel-demo-frontend
        app.kubernetes.io/instance: otel-demo
        app.kubernetes.io/component: frontend
        app.kubernetes.io/name: otel-demo-frontend
    spec:
      serviceAccountName: otel-demo
      containers:
        - name: frontend
          image: 'TAGGYDOOBER'
          imagePullPolicy: IfNotPresent
          ports:
          
          - containerPort: 8080
            name: service
          resources:
            limits:
              memory: 200Mi
          securityContext:
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
