otel-demo-helm/ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: Ingress
metadata:
  name: otel-demo-ingress
  labels:
    helm.sh/chart: opentelemetry-demo-0.16.0
    app.kubernetes.io/name: otel-demo
    app.kubernetes.io/instance: otel-demo
    app.kubernetes.io/component: frontendproxy-ingress
    app.kubernetes.io/version: "1.2.1"
    app.kubernetes.io/part-of: opentelemetry-demo
    app.kubernetes.io/managed-by: Helm
  annotations:
    external-dns.alpha.kubernetes.io/hostname: jessitron.honeydemo.io # give your domain name here
    alb.ingress.kubernetes.io/group.name: otel-demo
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=true,access_logs.s3.bucket=otel-demo-alb-access-logs,access_logs.s3.prefix=sso-demo-alb
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /v1/metrics
            pathType: Prefix
            backend:
              service:
                name: otel-demo-otelcol
                port:
                  number: 4318
          - path: /v1/traces
            pathType: Prefix
            backend:
              service:
                name: otel-demo-otelcol
                port:
                  number: 4318
          - path: /
            pathType: Prefix
            backend:
              service:
                name: otel-demo-frontendproxy
                port:
                  number: 8080
