otel-demo-helm/o11yday-ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: Ingress

# The app this is pointing to is deployed manually, from the observability-day-workshop repo.

metadata:
  name: o11yday-ingress
  namespace: o11yday
  labels:
    app.kubernetes.io/name: otel-demo
    app.kubernetes.io/instance: otel-demo
    app.kubernetes.io/component: o11yday-nginx-ingress
    app.kubernetes.io/version: "1.2.1"
  annotations:
    external-dns.alpha.kubernetes.io/hostname: o11yday.jessitron.honeydemo.io # give your domain name here
    alb.ingress.kubernetes.io/group.name: otel-demo
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443},{"HTTP":80}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=true,access_logs.s3.bucket=otel-demo-alb-access-logs,access_logs.s3.prefix=sso-demo-alb
    alb.ingress.kubernetes.io/group.name: "only-one-alb-please"
spec:
  ingressClassName: alb
  tls:
    - hosts:
        - "o11yday.jessitron.honeydemo.io"
  rules:
    - host: "o11yday.jessitron.honeydemo.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 8080
